--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 
     <div class="logos-section">
       <div class="logo-container">
-        <img src="logo1.png" alt="Minimal Sneaker Outline Logo" />
+        <img src="Vintage Prestige Sole Co. Logo.png" alt="Minimal Sneaker Outline Logo" />
       </div>
       <div class="logo-container">
-        <img src="logo2.png" alt="Vintage Script Prestige Sole Logo" />
+        <img src="Vintage Prestige Sole Co. Logo.png" alt="Vintage Script Prestige Sole Logo" />
       </div>
       <div class="logo-container">
-        <img src="logo3.png" alt="Mixed Prestige Sole Co Logo" />
+        <img src="Vintage Prestige Sole Co. Logo.png" alt="Mixed Prestige Sole Co Logo" />
       </div>
     </div>
   </main>
