Fix broken image references

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </head>
 <body>
   <header>
-    <img src="C2299E8F-3807-4B3D-AF19-BC80E984D50A.jpeg" alt="Prestige Sole Logo" class="logo-img" />
+    <img src="https://via.placeholder.com/200" alt="Prestige Sole Logo" class="logo-img" />
     <h1>Prestige Sole Co.</h1>
     <p class="tagline">Exclusive Shoe Boutique</p>
   </header>
@@ -130,7 +130,7 @@
   <main>
     <section class="product-grid">
       <div class="product">
-        <img src="C2299E8F-3807-4B3D-AF19-BC80E984D50A.jpeg" alt="Classic Sneaker">
+        <img src="https://via.placeholder.com/300" alt="Classic Sneaker">
         <h3>Classic Sneaker</h3>
         <p>Timeless style and superior comfort.</p>
         <p class="price">$250.00</p>
@@ -138,7 +138,7 @@
       </div>
 
       <div class="product">
-        <img src="C2299E8F-3807-4B3D-AF19-BC80E984D50A.jpeg" alt="Limited Edition Sneaker">
+        <img src="https://via.placeholder.com/300" alt="Limited Edition Sneaker">
         <h3>Limited Edition Sneaker</h3>
         <p>Exclusive drop for true enthusiasts.</p>
         <p class="price">$450.00</p>
@@ -146,7 +146,7 @@
       </div>
 
       <div class="product">
-        <img src="C2299E8F-3807-4B3D-AF19-BC80E984D50A.jpeg" alt="Sporty Elegance">
+        <img src="https://via.placeholder.com/300" alt="Sporty Elegance">
         <h3>Sporty Elegance</h3>
         <p>Luxury design meets daily wear.</p>
         <p class="price">$300.00</p>
